# rustcom

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2023-05-21-085316_initial_schema/: up.sql
src/: main.rs
src/connectors/postgres/: mod.rs  pool.rs  schemas.rs
src/modules/: mod.rs
src/modules/orders/: orders.rs
src/modules/products/: data.rs  mod.rs  models.rs  products.rs
